# rosetta

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  SECURITY.md  SKILL.md  llms.txt  pyproject.toml  release-please-config.json  ruff.toml
skills/rosetta/: .coveragerc  CONTRIBUTING.md  SKILL.md  pyproject.toml  rosetta_cli.py
skills/rosetta/commands/: README.md  rosetta-conflicts.md  rosetta-grill.md  rosetta-preflight.md
skills/rosetta/decisions/: GLOSSARY.json  GLOSSARY.md  README.md  config.json
skills/rosetta/decisions/architecture-decisions/: 0001-deterministic-collector-normalized-markdown-pipeline.md  0002-five-agent-store-registry-and-loud-coverage.md  0003-exact-cwd-scoping-default.md  0004-truth-hierarchy-and-adversarial-verification.md  0005-path-encoding-non-alphanumeric-to-dash.md  0006-hermes-multi-shape-ingestion.md  0007-decision-records-as-first-class-output.md  0008-customizable-schema-and-per-team-config.md  0009-deterministic-decisions-tooling.md  0010-machine-wide-project-discovery.md  0011-thin-rosetta-cli-dispatcher.md  0012-mcp-external-source-ingestion.md  0013-installable-cli-packaging.md  0014-pluggable-per-agent-parsers-and-registry.md  0015-expanded-agent-coverage-and-exclusions.md  0016-incremental-collect-via-processed-session-ledger.md  (+11 more)
skills/rosetta/docs/: PLAN-loop-integration.md  README.md  agents.md  cli.md  decisions.md  getting-started.md
skills/rosetta/references/: decision-schema.md  external-sources.md  loop-integration.md
skills/rosetta/scripts/: collect.py  decisions.py  drift.py  gates.py  harness.py  ingest.py  preflight.py  rosetta  runs.py
skills/rosetta/specs/: SPEC-03-decision-coverage.md  SPEC-04-alias-glossary.md
skills/rosetta/templates/: adr-template.md  bdr-template.md  pdr-template.md
skills/rosetta/tests/: _loop_helpers.py  test_adversarial_evals.py  test_cli_dispatch.py  test_collect_cli.py  test_collect_resolvers.py  test_collect_units.py  test_coverage.py  test_decisions_cli.py  test_drift_cli.py  test_gates_cli.py  test_glossary.py  test_harness_export.py  test_incremental.py  test_ingest.py  test_ingest_cli.py  test_ingest_signal.py  test_integrity.py  test_loop_inprocess.py  test_loop_integration_docs.py  test_measure_tokens.py  test_preflight_cli.py  test_report.py  test_robustness.py  test_runs_cli.py  test_score.py  test_staleness.py
(+344 files in other folders)
